Fixing overflow-y and renaming urls.

--- a/src/main/webapp/static/battleScreen/battleScreen.css
+++ b/src/main/webapp/static/battleScreen/battleScreen.css
@@ -10,7 +10,7 @@
 
 #playersList {
 	height: 520px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	border: 1px solid white;
 	border-right: 0px;
 }
